# rustypals

./: Cargo.toml  README.md
data/: Jones2004_Single.txt  ex1-4.txt
src/: error.rs  exercises.rs  main.rs  set1.rs  set2.rs  set3.rs  user_profile.rs  utils.rs  xor.rs
src/cipher/: aes.rs  mod.rs  xor.rs
src/crack/: aes.rs  mod.rs  user_profile.rs  xor.rs
