[package]
name = "rustypals"
version = "0.1.0"
authors = ["Cory Levinson <cjlevinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
base64 = "0.10.1"
bit-vec = "0.6.1"
itertools = "0.8.0"
openssl = "0.10.55"
rand = "0.7.2"
failure = "0.1.6"
failure_derive = "0.1.6"
